# kio_ros2_ws

./: .gitignore  README.md
src/kio_teleop_openarm/: CMakeLists.txt  package.xml
src/kio_teleop_openarm/config/: camera.yaml  controller.yaml  home_pose.yaml  motor_bridge.yaml  perception.yaml  simulator.yaml  vr_bridge.yaml
src/kio_teleop_openarm/config/trajectories/: door_open.json  door_open_approach.json  door_open_retreat.json  takeout_deliver.json  takeout_grasp.json
src/kio_teleop_openarm/kio_teleop_openarm/lib/: auto_grasp.py  auto_grasp_state.py  calibration.py  damiao.py  demo_state.py  depth_estimator.py  detector.py  grasp_generator.py  gripper.py  ik_solver.py  spatial_mapper.py  stereo_renderer.py  teleop_upoo_hardware.py  trajectory_planner.py  transforms.py  upoo_motor_constants.py
src/kio_teleop_openarm/kio_teleop_openarm/nodes/: app_bridge.py  auto_grasp_state_node.py  camera_node.py  controller.py  demo_state_node.py  grasp_planner_node.py  keyboard_interface.py  motor_bridge.py  perception_node.py  simulator.py  trajectory_executor_node.py  vr_bridge.py
src/kio_teleop_openarm/launch/: teleop.launch.py
src/kio_teleop_openarm/msg/: Detection.msg  GraspCandidate.msg  GraspCandidateArray.msg
src/kio_teleop_openarm/scripts/: view_model.py
src/kio_teleop_openarm/srv/: DemoTrigger.srv  DetectObjects.srv  GripperCmd.srv  PlanGrasp.srv  SelectGrasp.srv
src/kio_teleop_openarm/tools/: camera_calibrate.py  hand_eye_calibrate.py  verify_door_position.py
