<?xml version="1.0"?>
<package format="3">
  <name>kio_teleop_openarm</name>
  <version>0.1.0</version>
  <description>UPOO Bimanual VR Teleop — ROS2 multi-node architecture (MuJoCo + DLS IK)</description>
  <maintainer email="user@example.com">kiorobot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
